examples/test/testpolicy18347.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18347
  namespace: namespace388
spec:
  podSelector:
    matchLabels:
      key28: value32
      key34: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value38
          key11: value35
          key0: value47
      podSelector:
        matchLabels:
          key11: value21
          key41: value3
          key6: value36
